# EmplyoerSurvey

./: .editorconfig  .gitignore  README.md  TODO  build.sh  globals.py  http_errors.py  jsconfig.json  main.py  pyproject.toml  requirements.txt  setup.py  start.sh  tag_colors.pkl
.do/: app.yaml
auth/: __init__.py  policy.py
common/: __init__.py
common/colours/: colours.gpa  tag_colours.gpa  xd-based.ase  xd-based.css  xd-based.gpa  xd2.gpa
dev/: env2yaml.ipynb  gen_pass.ipynb  icon-sql.ipynb  index-icons.py  light-or-dark.js  light-or-dark.py  light-or-dark_byhand.ipynb  redis-cluster.ipynb  rgb2hex.ipynb  scratch.js  scratch.json  scratch.sql  stash.js  stash.py  tag_class.ipynb  transpile-js.ipynb  ws-client.py
expectations/: __init__.py
graph/: __init__.py
jobs/: notifications.py  surveys.py
middlewares/: __init__.py
redismod/: redisgraph.py  rejson.py  streams.py
routes/: __init__.py  admin.py  api.py  auth.py  debug.py  public.py  user.py  ws.py
schemas/: esurvey-2021_01_30_22_59_05-dump.sql  esurvey-2021_01_30_concise.sql  mysql-cluster_private-network.txt  mysql-cluster_public-network.txt  mysql_ca-certificate.crt
sess/: __init__.py
static/: site.webmanifest
static/css/: common.css
static/css/lib/: datatables.css
static/images/: businessman-surfing.xcf  surf_778.xcf
static/js/: admin_algo.js  admin_surveys.js  admin_users.js  answer.js  bank.js  bower.json  common.js  common_pre.js  create.js  create_simple.js  dash.js  light-or-dark.js  orgs.js  package-lock.json  package.json  queues.js  register_employee.js  stats.js  survey.js  tags.js  user_settings.js  ws.js
static/js/lib/: canvasjs.min.js  iconify.js  jquery-3.5.1.js  jquery-3.5.1.min.map  jquery.awesome-cursor.js  wscb.js
static/rev/hiyer-intro-1/: json_slider.html  slider.html
static/urora/js/: app.js  bootstrap-material-design.js  fastclick.js  jquery.blockUI.js  jquery.nicescroll.js  jquery.slimscroll.js  waves.js
static/urora/pages/: chartist.init.js  dashboard.js  datatables.init.js  form-advanced.js  form-editor-init.js  gmaps.js
static/urora/scss/: _alertify.scss  (+47 more)
templates/: admin_algo.html  admin_home.html  admin_surveys.html  admin_users.html  answer.html  bank.html  base.html  calendar.html  category_stats.html  create.html  create_simple.html  dashboard.html  edit_employee.html  forgot_password.html  http_error.html  index.html  learn.html  login.html  orgs.html  question_stats.html  questions.html  register.html  register_employee.html  register_employer.html  response_rate.html  schedule.html  spot.html  stats.html  survey.html  survey_stats.html  user_settings.html
validate/: __init__.py
(+110 files in other folders)
